Bug 82123 -- enable embeddors to alter the focus traversal so that the document itself receives focus first instead of last.  r=saari, adamlock, sr=jst, a=chofmann.